# mediocrehacker.github.io

./: README.md  about.html  about.markdown  archive.html  circle.yml  contact.html  contact.markdown  deploy.sh  goals.html  goals.markdown  index.html  mediocrehacker-github-io.cabal  site.hs
css/: default.css
posts/: 2016-03-20-fight_mediocrity.html  2016-03-20-fight_mediocrity.markdown
templates/: archive.html  default.html  post.html
