name:               mediocrehacker-github-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

author:             mediocreHacker
maintainer:         mediocreHacker@protonmail.com

executable site
  main-is:          site.hs
  build-depends:    base
                  , hakyll
  ghc-options:      -threaded
  default-language: Haskell2010
